--- a/apps/this-film-finder/src/themes/variables.scss
+++ b/apps/this-film-finder/src/themes/variables.scss
@@ -1,6 +1,138 @@
 :root {
+
+  // Global HTML variables
+
   --safe-area: var(--s4);
-  --sp: calc(var(--s) / 5);
+
+  --sp:calc(var(--s) / 5);
+
+  // Colors
+
+  --color-text: var(--color-primary);
+  --color-text-rgb: var(--color-primary-rgb);
+  --color-text-contrast: var(--color-primary-contrast);
+  --color-text-contrast-rgb: var(--color-primary-contrast-rgb);
+  --color-light: var(--color-primary-contrast);
+  --color-light-rgb: var(--color-primary-contrast-rgb);
+
+  //PRIMARY
+  --color-primary: #000000;
+  --color-primary-rgb: 0, 0, 0;
+  --color-primary-contrast: #fff;
+  --color-primary-contrast-rgb: 255, 255, 255;
+  --color-primary-50: #efefef;
+  --color-primary-100: #d9d9d9;
+  --color-primary-200: #b6b6b6;
+  --color-primary-300: #e9e9e9;
+  --color-primary-400: #868686;
+  --color-primary-500: #6e6e6e;
+  --color-primary-600: #555555;
+  --color-primary-700: #3d3d3d;
+  --color-primary-800: #252525;
+  --color-primary-900: var(--color-primary);
+
+  //SECONDARY
+  --color-secondary: #ffc700;
+  --color-secondary-rgb: 255, 199, 0;
+  --color-secondary-contrast: #000000;
+  --color-secondary-contrast-rgb: 0, 0, 0;
+  --color-secondary-50: #fff9e6;
+  --color-secondary-100: #ffeeb0;
+  --color-secondary-200: #ffe58a;
+  --color-secondary-300: #ffd954;
+  --color-secondary-400: #ffd233;
+  --color-secondary-500: #ffc700;
+  --color-secondary-600: #e8b500;
+  --color-secondary-700: #b58d00;
+  --color-secondary-800: #8c6d00;
+  --color-secondary-900: #6b5400;
+
+  //GREY
+  --color-grey-50: #f9f9f9;
+  --color-grey-100: #ebebeb;
+  --color-grey-200: #e2e2e2;
+  --color-grey-300: #d4d4d4;
+  --color-grey-400: #cccccc;
+  --color-grey-500: #bfbfbf;
+  --color-grey-600: #aeaeae;
+  --color-grey-700: #888888;
+  --color-grey-800: #696969;
+  --color-grey-900: #505050;
+  --color-grey-contrast: var(--color-primary-500);
+
+  //FEEDBACK SUCCESS
+  --color-success: #47a50d;
+  --color-success-50: #c6e3b4;
+  --color-success-100: #c6e3b4;
+  --color-success-200: #aad690;
+  --color-success-300: #84c35d;
+  --color-success-400: #6cb73d;
+  --color-success-500: var(--color-success);
+  --color-success-600: #41960c;
+  --color-success-700: #327509;
+  --color-success-800: #275b07;
+  --color-success-900: #1e4505;
+
+  //FEEDBACK ERROR
+  --color-error: #b54848;
+  --color-error-50: #fff0f0;
+  --color-error-100: #ffcfcf;
+  --color-error-200: #ffb8b8;
+  --color-error-300: #ff9898;
+  --color-error-400: #ff8484;
+  --color-error-500: var(--color-error);
+  --color-error-600: #e85c5c;
+  --color-error-700: #b54848;
+  --color-error-800: #8c3838;
+  --color-error-900: #6b2a2a;
+  --color-error-contrast: #d51010;
+
+  //FEEDBACK WARNING
+  --color-warning: #ff9533;
+  --color-warning-50: #fff4eb;
+  --color-warning-100: #ffdec0;
+  --color-warning-200: #ffcea1;
+  --color-warning-300: #ffb876;
+  --color-warning-400: #ff8484;
+  --color-warning-500: var(--color-warning);
+  --color-warning-600: #e8882e;
+  --color-warning-700: #b56a24;
+  --color-warning-800: #8c521c;
+  --color-warning-900: #6b3f15;
+
+  //FEEDBACK ADVICE
+  --color-advice: #2b99ff;
+  --color-advice-50: #eaf5ff;
+  --color-advice-100: #bddfff;
+  --color-advice-200: #9dd0ff;
+  --color-advice-300: #71bbff;
+  --color-advice-400: #55adff;
+  --color-advice-500: var(--color-advice);
+  --color-advice-600: #278be8;
+  --color-advice-700: #1f6db5;
+  --color-advice-800: #18548c;
+  --color-advice-900: #12406b;
+
+  // Fonts
+  --font-primary: "Source Sans Pro", sans-serif;
+
+  // FONT SIZES
+
+  --fs-sm-v: 14;
+  --fs-sm: #{rem-css-vars(--fs-sm-v)};
+  --lh-sm: 1.28;
+  --fs-base-v: 16;
+  --fs-base: #{rem-css-vars(--fs-base-v)};
+  --lh-base: 1.25;
+  --fs-md-v: 20;
+  --fs-md: #{rem-css-vars(--fs-md-v)};
+  --lh-md: 1.25;
+  --fs-lg-v: 30;
+  --fs-lg: #{rem-css-vars(--fs-lg-v)};
+  --lh-lg: 1.26;
+  --fs-xl-v: 38;
+  --fs-xl: #{rem-css-vars(--fs-xl-v)};
+  --lh-xl: 1.15;
 
   //IONIC VARIABLES
   --ion-color-primary: #000000;
@@ -76,14 +208,13 @@
   --site-footer-height: calc(var(--s) * 27);
   --page-top-space: var(--s2);
   --page-bottom-space: calc(var(--s) * 16);
-  --toolbar-warning-color: #ff6565;
-
+  --toolbar-warning-color: #FF6565;
+  
   --page-min-height: calc(100vh - var(--site-header-height));
   --input-min-height: var(--s10);
-  --page-min-height-show-footer: calc(
-    100vh - var(--site-header-height) - var(--site-footer-height)
-  );
-  --side-menu-width: calc(var(--s) * 17);
+  --page-min-height-show-footer: calc(100vh - var(--site-header-height) - var(--site-footer-height));
+  --side-menu-width:calc(var(--s)*17);
 
   --transition-default: 0.3s ease-out;
+
 }
