--- a/libs/feature-film-list/src/lib/containers/film-list.component.scss
+++ b/libs/feature-film-list/src/lib/containers/film-list.component.scss
@@ -4,11 +4,11 @@
   .filter-input-wrapper {
     display: flex;
     gap: 10px;
-    flex-direction: row;
+    flex-direction: column;
     margin-bottom: var(--form-field-separation);
     ion-input {
-        min-width: 20%;
-        max-width: 20%;
+        min-width: 50%;
+        max-width: 50%;
         margin: 0;
       }
   }
