--- a/libs/feature-film-list/src/lib/components/movie-card.component.scss
+++ b/libs/feature-film-list/src/lib/components/movie-card.component.scss
@@ -11,11 +11,11 @@
     ion-card {
       width: 250px;
       height: 500px;
-      --background-hover: var(--color-secondary-600);
+      --background-hover: var(--ion-color-secondary-shade);
     }
     &:hover {
       ion-card {
-        background-color: var(--color-secondary-600);
+        background-color: var(--ion-color-secondary-shade);
       }
     }
     .actions-wrapper {
